--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,11 +7,11 @@
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>varroa</h1>
-    <h2>Your new AngularJS app is now ready...</h2>
-    <ng-view></ng-view>
+    <ui-view></ui-view>
     <!-- inject:vendor:js -->
     <!-- endinject -->
     <!-- inject:js -->
