Add another prompt

--- a/src/app/upload/upload.html
+++ b/src/app/upload/upload.html
@@ -34,7 +34,7 @@
           </div>
           <div class="alert alert-success" ng-show="uploadCtrl.success">
             <i class="fa fa-check"></i>
-            Upload complete!
+            Upload complete! Add another if you have it!
           </div>
           <div class="alert alert-danger" ng-show="uploadCtrl.error">
             <i class="fa fa-close"></i>
