--- a/src/app/upload/upload.html
+++ b/src/app/upload/upload.html
@@ -9,7 +9,7 @@
           <input class="form-control input-lg" type="text" ng-model="uploadCtrl.name" placeholder="Your name — optional!">
         </div>
         <div class="form-group">
-          <div ng-model="uploadCtrl.files" drag-over-class="{accept:'ok', reject:'err', delay:100}" class="droppable" ng-multiple="true" allow-dir="false" ng-accept="'image/*'" drop-available="dropAvailable" style="overflow: hidden;">
+          <div ng-file-select ng-file-drop ng-model="uploadCtrl.files" drag-over-class="{accept:'ok', reject:'err', delay:100}" class="droppable" ng-multiple="true" allow-dir="false" ng-accept="'image/*'" drop-available="dropAvailable" style="overflow: hidden;">
             <div ng-hide="dropAvailable" class="ide">File Drop not available</div>
             <div ng-show="dropAvailable && !uploadCtrl.files.length" class="">
               drop images here
@@ -27,14 +27,14 @@
           </button>
         </div>
         <div class="form-group">
-          <div class="progress" ng-show="uploadCtrl.inProgress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{uploadCtrl.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{uploadCtrl.progress}}%">
-              <span class="sr-only">{{uploadCtrl.progress}}% complete</span>
+          <div class="progress" ng-show="uploadCtrl.uploads.length" ng-repeat="upload in uploadCtrl.uploads">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{upload.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{upload.progress}}%" >
+              <span class="sr-only">{{upload.progress}}% complete</span>
             </div>
           </div>
           <div class="alert alert-success" ng-show="uploadCtrl.success">
             <i class="fa fa-check"></i>
-            Upload complete! Add another if you have it!
+            Upload complete! Thanks!
           </div>
           <div class="alert alert-danger" ng-show="uploadCtrl.error">
             <i class="fa fa-close"></i>
