--- a/src/app/upload/upload.html
+++ b/src/app/upload/upload.html
@@ -1,6 +1,13 @@
 <section class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-success btn-block" ui-sref="uploads">
+        Existing Uploads
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
       <h3>Upload Files</h3>
       <p>Upload pictures of bee frames here.</p>
       <p>If they have mites that's great, but we need pictures of "normal" bees too! Ideally they'll be pictures from a phone.</p>
