--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,4 +1,4 @@
 <header class="navbar navbar-fixed-top" role="banner" ui-view="header@"></header>
-<section class="container-fluid">
+<section class="container">
   <ui-view></ui-view>
 </section>
