--- a/src/app/layout/header.html
+++ b/src/app/layout/header.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="navbar-header">
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -10,11 +10,7 @@
   </div>
   <nav class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li><a ui-sref="upload">Add Pictures</a> </li>
-      <li><a ui-sref="uploads">Uploads</a> </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="navbar-text" ng-if="count">{{count}} pictures uploaded.</li>
+      <li><a ui-sref="tilevote">Categorise</a> </li>
     </ul>
   </nav>
 </div>
