Update the copy.

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,14 +1,18 @@
-<div class="jumbotron">
-  <h1>Varroa Vision Project</h1>
+<div class="jumbotron text-center">
+  <h1>Varroa Vision</h1>
+  <div class="text-center">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Varroa_Mite.jpg">
+    <!-- from https://en.wikipedia.org/wiki/File:Varroa_Mite.jpg -->
+  </div>
   <dl>
-    <dt>Varroa</dt>
+    <dt>Varroa destructor</dt>
     <dd>a microscopic mite which is a debilitating parasite of the honeybee, causing loss of honey production.</dd>
   </dl>
   <h3>What We Hope</h3>
   <p>That we can develop computer vision to detect the presence of varroa mite.</p>
   <h3>What We Need</h3>
-  <p>Pictures of bees! Lots of pictures of bees. A thousand pictures of frames of bees would be great; ten thousand would be better &mdash; we need all kinds and in all sorts of lighting.</p>
-  <button class="btn btn-lg btn-block btn-primary" ui-sref="upload">
-    I want to help
+  <p>Your eyes! Help categorise the images &mdash; all you need to do is to be able to spot the difference between a picture that has a bee in it, and one that doesn't. Simple, right?</p>
+  <button class="btn btn-lg btn-primary" ui-sref="tilevote">
+    Get Started
   </button>
 </div>
