--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -48,6 +48,13 @@
           mites
         </td>
       </tr>
+      <tr>
+        <td></td>
+        <td class="text-muted">
+          <span class="badge">{{counts.uncategoriseds}}</span>
+          uncategorised
+        </td>
+      </tr>
     </tbody>
   </table>
 </div>
