Put a placeholder the right size when we don't have a tile.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -68,6 +68,10 @@ tile-vote {
       width: 33%;
     }
   }
+  .placeholder {
+    width: 128px;
+    height: 128px;
+  }
   .text-success .badge {
     background-color: $brand-success;
   }
