--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,4 +1,4 @@
-<div ng-if="tile" class="text-center">
+<div class="text-center">
   <table>
     <tbody>
       <tr>
@@ -9,7 +9,10 @@
           <label>I don't see a bee</label>
         </td>
         <td>
-          <img ng-src="{{tile.url}}" width="128" height="128">
+          <img ng-if="tile" ng-src="{{tile.url}}" width="128" height="128">
+          <div class="placeholder text-center" ng-if="!tile">
+            <i class="fa fa-2x fa-spinner fa-spin"></i>
+          </div>
         </td>
         <td class="text-left">
           <button class="btn btn-success btn-lg" ng-click="upVote(tile._id)">
@@ -57,13 +60,6 @@
       </tr>
     </tbody>
   </table>
-</div>
-<div ng-if="!tile">
-  <div class="row form-group">
-    <div class="col-xs-12 text-center">
-      <i class="fa fa-3x fa-spinner fa-spin"></i>
-    </div>
-  </div>
 </div>
 <h3 class="text-center">What Do I Need To Do Here?</h3>
 <p class="lead text-center">
