--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr>
         <td class="text-right">
-          <button class="btn btn-default btn-lg" ng-click="downVote(tile._id)">
+          <button class="btn btn-default btn-lg" ng-disabled="!tile" ng-click="downVote(tile._id)">
             <i class="fa fa-thumbs-down"></i>
           </button>
           <label>I don't see a bee</label>
@@ -15,7 +15,7 @@
           </div>
         </td>
         <td class="text-left">
-          <button class="btn btn-success btn-lg" ng-click="upVote(tile._id)">
+          <button class="btn btn-success btn-lg" ng-disabled="!tile" ng-click="upVote(tile._id)">
             <i class="fa fa-thumbs-up"></i>
           </button>
           <label>I see a bee</label>
@@ -23,7 +23,7 @@
       </tr>
       <tr>
         <td colspan="3">
-          <button class="btn btn-danger" ng-click="parasite(tile._id)">
+          <button class="btn btn-danger" ng-disabled="!tile" ng-click="parasite(tile._id)">
             <i class="fa fa-bug"></i>
             Varroa!
           </button>
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td colspan="3">
-          <button class="btn btn-link" ng-click="showNext()">
+          <button class="btn btn-link" ng-disabled="!tile" ng-click="showNext()">
             Give me a different picture
           </button>
         </td>
