--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,74 +1,69 @@
 <div class="text-center">
-  <table>
-    <tbody>
-      <tr>
-        <td class="text-right">
+  <div class="tile-list" infinite-scroll="fetchTile()" infinite-scroll-disabled="!expert">
+    <div class="tile" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
+      <div>
+        <div class="text-right">
           <button class="btn btn-default btn-lg" ng-disabled="!tile" ng-click="downVote(tile._id)">
             <i class="fa fa-thumbs-down"></i>
           </button>
           <label>I don't see a bee</label>
-        </td>
-        <td>
+        </div>
+        <div>
           <img ng-if="tile" ng-src="{{tile.url}}" width="128" height="128">
           <div class="placeholder text-center" ng-if="!tile">
             <i class="fa fa-2x fa-spinner fa-spin"></i>
           </div>
-        </td>
-        <td class="text-left">
+        </div>
+        <div class="text-left">
           <button class="btn btn-success btn-lg" ng-disabled="!tile" ng-click="upVote(tile._id)">
             <i class="fa fa-thumbs-up"></i>
           </button>
           <label>I see a bee</label>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <button class="btn btn-danger" ng-disabled="!tile" ng-click="parasite(tile._id)">
-            <i class="fa fa-bug"></i>
-            Varroa!
-          </button>
-          <label>I see a varroa mite</label>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <button class="btn btn-link" ng-disabled="!tile" ng-click="showNext()">
-            Give me a different picture
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td class="text-success">
-          <span class="badge">{{counts.bees}}</span>
-          bees
-        </td>
-        <td class="text-muted">
-          <span class="badge">{{counts.unbees}}</span>
-          not bees
-        </td>
-        <td class="text-danger">
-          <span class="badge">{{counts.varroas}}</span>
-          mites
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td class="text-muted">
-          <span class="badge">{{counts.uncategoriseds}}</span>
-          uncategorised
-        </td>
-      </tr>
-    </tbody>
-  </table>
+        </div>
+      </div>
+      <div colspan="3">
+        <button class="btn btn-danger" ng-disabled="!tile" ng-click="parasite(tile._id)">
+          <i class="fa fa-bug"></i>
+          Varroa!
+        </button>
+        <label>I see a varroa mite</label>
+      </div>
+    </div>
+    <div ng-if="!expert">
+      <button class="btn btn-warning" ng-click="goExpert()">
+        <i class="fa fa-rocket"></i>
+        Expert Mode
+      </button>
+      <label>I am ready for a torrent of images</label>
+    </div>
+    <div ng-if="!expert">
+      <div colspan="3">
+        <button class="btn btn-link" ng-disabled="!tile" ng-click="showNext()">
+          Give me a different picture
+        </button>
+      </div>
+    </div>
+    <div ng-if="!expert">
+      <div class="text-success">
+        <span class="badge">{{counts.bees}}</span>
+        bees
+      </div>
+      <div class="text-muted">
+        <span class="badge">{{counts.unbees}}</span>
+        not bees
+      </div>
+    </div>
+    <div>
+      <div class="text-muted">
+        <span class="badge">{{counts.uncategoriseds}}</span>
+        uncategorised
+      </div>
+    </div>
+  </div>
 </div>
-<h3 class="text-center">What Do I Need To Do Here?</h3>
-<p class="lead text-center">
-  Click on the <i class="fa fa-thumbs-up text-success"></i> if the image has a bee in it; the <i class="fa fa-thumbs-down"></i> if it doesn't. Some of the images will be blurry and hard to make out just what they have in them. Don't worry &mdash; if you can't tell what it is, it's not a bee.
-</p>
-<p class="lead text-center">
-  <b>Bonus points!</b> If you spot a varroa mite, click the <i class="fa fa-bug text-danger"></i> button! Varroa mites look like this, but as you can see they're pretty small:
-</p>
-<p class="text-center">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Varroa_destructor_on_drone_66a.jpg/128px-Varroa_destructor_on_drone_66a.jpg">
-  <!-- from https://commons.wikimedia.org/wiki/File:Varroa_destructor_on_drone_66a.jpg -->
-</p>
+<div class="explanation" ng-if="!expert">
+  <h3 class="text-center">What Do I Need To Do Here?</h3>
+  <p class="lead text-center">
+    Click on the <i class="fa fa-thumbs-up text-success"></i> if the image has a bee in it; the <i class="fa fa-thumbs-down"></i> if it doesn't. Some of the images will be blurry and hard to make out just what they have in them. Don't worry &mdash; if you can't tell what it is, it's not a bee.
+  </p>
+</div>
