--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,65 +1,56 @@
 <div class="text-center">
-  <div class="tile-list" infinite-scroll="fetchTile()" infinite-scroll-disabled="!expert">
-    <div class="tile" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
-      <div>
-        <div class="text-right">
-          <button class="btn btn-default btn-lg" ng-disabled="!tile" ng-click="downVote(tile._id)">
-            <i class="fa fa-thumbs-down"></i>
-          </button>
-          <label>I don't see a bee</label>
-        </div>
-        <div>
-          <img ng-if="tile" ng-src="{{tile.url}}" width="128" height="128">
-          <div class="placeholder text-center" ng-if="!tile">
-            <i class="fa fa-2x fa-spinner fa-spin"></i>
-          </div>
-        </div>
-        <div class="text-left">
-          <button class="btn btn-success btn-lg" ng-disabled="!tile" ng-click="upVote(tile._id)">
-            <i class="fa fa-thumbs-up"></i>
-          </button>
-          <label>I see a bee</label>
-        </div>
-      </div>
-      <div colspan="3">
-        <button class="btn btn-danger" ng-disabled="!tile" ng-click="parasite(tile._id)">
-          <i class="fa fa-bug"></i>
-          Varroa!
+<div class="tile-list" infinite-scroll="fetchTile()" infinite-scroll-disabled="!expert">
+  <div class="tile form-group" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
+    <div class="grid-row">
+      <div class="stretch text-right top">
+        <button class="btn btn-default btn-lg" ng-disabled="!tile" ng-click="downVote(tile._id)">
+          <i class="fa fa-thumbs-down"></i>
         </button>
-        <label>I see a varroa mite</label>
+        <label>I don't see a bee</label>
+      </div>
+      <div class="top">
+        <img ng-if="tile" ng-src="{{tile.url}}" width="64" height="64">
+        <div class="placeholder text-center" ng-if="!tile">
+          <i class="fa fa-2x fa-spinner fa-spin"></i>
+        </div>
+      </div>
+      <div class="stretch text-left top">
+        <button class="btn btn-success btn-lg" ng-disabled="!tile" ng-click="upVote(tile._id)">
+          <i class="fa fa-thumbs-up"></i>
+        </button>
+        <label>I see a bee</label>
       </div>
     </div>
-    <div ng-if="!expert">
-      <button class="btn btn-warning" ng-click="goExpert()">
-        <i class="fa fa-rocket"></i>
-        Expert Mode
-      </button>
-      <label>I am ready for a torrent of images</label>
-    </div>
-    <div ng-if="!expert">
-      <div colspan="3">
+    <div class="grid-row" ng-if="!expert">
+      <div class="stretch">
         <button class="btn btn-link" ng-disabled="!tile" ng-click="showNext()">
           Give me a different picture
         </button>
       </div>
     </div>
-    <div ng-if="!expert">
-      <div class="text-success">
-        <span class="badge">{{counts.bees}}</span>
-        bees
-      </div>
-      <div class="text-muted">
-        <span class="badge">{{counts.unbees}}</span>
-        not bees
-      </div>
-    </div>
-    <div>
-      <div class="text-muted">
-        <span class="badge">{{counts.uncategoriseds}}</span>
-        uncategorised
-      </div>
-    </div>
   </div>
+</div>
+<div class="grid-row form-group" ng-if="!expert">
+  <div class="text-success stretch text-right">
+    <span class="badge">{{counts.bees}}</span>
+    bees
+  </div>
+  <div class="text-muted">
+    <span class="badge">{{counts.uncategoriseds}}</span>
+    uncategorised
+  </div>
+  <div class="text-muted stretch text-left">
+    <span class="badge">{{counts.unbees}}</span>
+    not bees
+  </div>
+</div>
+<div ng-if="!expert">
+  <button class="btn btn-warning" ng-click="goExpert()">
+    <i class="fa fa-rocket"></i>
+    Expert Mode
+  </button>
+  <label>I am ready for a torrent of images</label>
+</div>
 </div>
 <div class="explanation" ng-if="!expert">
   <h3 class="text-center">What Do I Need To Do Here?</h3>
