--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,21 +1,24 @@
 <div class="text-center">
+<div ng-if="tiles.length === 0">
+  <div class="placeholder text-center">
+    <i class="fa fa-2x fa-spinner fa-spin"></i>
+    <label>Fetching more...</label>
+  </div>
+</div>
 <div class="tile-list" infinite-scroll="fetchTile()" infinite-scroll-disabled="!expert">
   <div class="tile form-group" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
     <div class="grid-row">
       <div class="stretch text-right top">
-        <button class="btn btn-default btn-lg" ng-disabled="!tile" ng-click="downVote(tile._id)">
+        <button class="btn btn-default btn-lg" ng-click="downVote(tile._id)">
           <i class="fa fa-thumbs-down"></i>
         </button>
         <label>I don't see a bee</label>
       </div>
       <div class="top">
-        <img ng-if="tile" ng-src="{{tile.url}}" width="64" height="64">
-        <div class="placeholder text-center" ng-if="!tile">
-          <i class="fa fa-2x fa-spinner fa-spin"></i>
-        </div>
+        <img ng-src="{{tile.url}}" width="64" height="64">
       </div>
       <div class="stretch text-left top">
-        <button class="btn btn-success btn-lg" ng-disabled="!tile" ng-click="upVote(tile._id)">
+        <button class="btn btn-success btn-lg" ng-click="upVote(tile._id)">
           <i class="fa fa-thumbs-up"></i>
         </button>
         <label>I see a bee</label>
@@ -23,7 +26,7 @@
     </div>
     <div class="grid-row" ng-if="!expert">
       <div class="stretch">
-        <button class="btn btn-link" ng-disabled="!tile" ng-click="showNext()">
+        <button class="btn btn-link" ng-click="showNext()">
           Give me a different picture
         </button>
       </div>
