hide spinner when not needed

--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-<div>
+<div ng-if="tiles.length === 0">
   <div class="placeholder">
     <i class="fa fa-2x fa-spinner fa-spin"></i>
     <label>Fetching more...</label>
