--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -5,7 +5,8 @@
     <label>Fetching more...</label>
   </div>
 </div>
-<div class="tile-list" infinite-scroll="fetchTiles()" infinite-scroll-distance="3" infinite-scroll-disabled="!expert">
+<div class="tile-list" infinite-scroll="fetchTiles()" infinite-scroll-disabled="fetching || !expert">
+
   <div class="tile form-group" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
     <div class="grid-row">
       <div class="stretch text-right top">
