Button to leave Expert Mode

--- a/src/app/tile/tile-vote.html
+++ b/src/app/tile/tile-vote.html
@@ -1,4 +1,11 @@
 <div class="text-center">
+<div class="text-center" ng-if="expert">
+  <button class="btn btn-warning active" ng-click="leaveExpert()">
+    <i class="fa fa-toggle-on"></i>
+    Expert Mode
+  </button>
+  <label>Slow the torrent!</label>
+</div>
 <div class="tile-list" infinite-scroll="fetchTiles()" infinite-scroll-disabled="fetching || !expert">
 
   <div class="tile form-group" ng-repeat="tile in tiles track by tile._id" ng-show="$first || expert">
@@ -53,7 +60,7 @@
 </div>
 <div ng-if="!expert">
   <button class="btn btn-warning" ng-click="goExpert()">
-    <i class="fa fa-rocket"></i>
+    <i class="fa fa-toggle-off"></i>
     Expert Mode
   </button>
   <label>I am ready for a torrent of images</label>
